syntax = "proto3";

package rudder;

import "manifest.proto";

message HeartbeatRequest {
  uint64 node_id = 1;
  uint64 watermark = 2;
  uint64 latest_version_id = 3;
}

message HeartbeatResponse {
  repeated manifest.VersionDiff version_diffs = 1;
}

message InsertL0Request {
  uint64 node_id = 1;
  repeated uint64 sst_ids = 2;
  uint64 latest_version_id = 3;
}

message InsertL0Response {
  repeated manifest.VersionDiff version_diffs = 1;
}

service RudderService {
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
  rpc InsertL0(InsertL0Request) returns (InsertL0Response);
}
